--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,15 +5,14 @@ PORT=5000
 NODE_ENV=development
 
 # Frontend URL (for CORS)
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://sentimentalanalysis-123.netlify.app
 
 # MongoDB Configuration
 MONGODB_URI=mongodb://localhost:27017/econsultation
 
 # Hugging Face API Configuration
-# Get your free API key from: https://huggingface.co/settings/tokens
 HUGGING_FACE_API_KEY=your_hugging_face_api_key_here
 
-# Optional: Custom model endpoints (if using different models)
+# Optional: Custom model endpoints
 # SENTIMENT_MODEL=cardiffnlp/twitter-roberta-base-sentiment-latest
 # SUMMARIZATION_MODEL=facebook/bart-large-cnn
